Added Stéphane to the home page

--- a/index.html
+++ b/index.html
@@ -75,13 +75,20 @@
                     </div>
 
                     <div class="col-md-4 teammate">
-                        <img class="img-thumbnail" src="img/you.png">
-                        <div class="name">You</div>
+                        <img class="img-thumbnail" src="img/stephane-bagnier.jpg">
+                        <div class="name">Stéphane Bagnier</div>
                         <div class="bio">
-                            We're looking for soulmates to either join the core team,
-                            or be part of our network.
+                            Software and startup craftsman.
+                            <br>
+                            Agile and Lean Startup practitioner.
+                        </div>
+                        <div class="social">
+                            <a href="https://twitter.com/bagnier"><i class="fa fa-twitter-square"></i></a>
+                            <a href="https://www.linkedin.com/in/bagnier"><i class="fa fa-linkedin-square"></i></a>
+                            <a href="http://www.agilelevelup.com"><i class="fa fa-rss-square"></i></a>
                         </div>
                     </div>
+
                 </div>
 
                 <div class="row">
