--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
                             <a href="https://twitter.com/ya_f"><i class="fa fa-twitter-square"></i></a>
                             <a href="https://www.linkedin.com/in/yannickfrancois"><i class="fa fa-linkedin-square"></i></a>
                             <a href="https://github.com/yaf"><i class="fa fa-github-square"></i></a>
+                            <a href="http://elsif.fr"><i class="fa fa-rss-square"></i></a>
+
                         </div>
                     </div>
 
