Add french version and make it the default

--- a/index.html
+++ b/index.html
@@ -1,153 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Pocket Sensei</title>
-
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
-        <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-            <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-        <![endif]-->
-    </head>
-    <body>
-        <div class="container">
-
-            <header>
-                <div class="row">
-                    <h1>Pocket Sensei</h1>
-                    <h2>Helping organizations innovate through software</h2>
-                    <img class="logo img" src="img/pocket-sensei.png">
-                </div>
-            </header>
-
-            <section class="about text-center">
-                <div class="row">
-                    <div class="col-md-6 col-md-offset-3">
-                        <h3>Our Mission</h3>
-                        <p>We help our customers with the challenges of:<p>
-                        <p>1. building the right software,</p>
-                        <p>2. building their software right.</p>
-                    </div>
-                </div>
-            </section>
-
-            <section class="team">
-
-                <h3>The Team</h3>
-
-                <div class="row">
-                    <div class="col-md-4 teammate">
-                        <img class="img-thumbnail" src="img/ronan-amicel.jpg">
-                        <div class="name">Ronan Amicel</div>
-                        <div class="bio">
-                            Geek &amp; entrepreneur.
-                            <br>
-                            Python expert.
-                        </div>
-                        <div class="social">
-                            <a href="https://twitter.com/amicel"><i class="fa fa-twitter-square"></i></a>
-                            <a href="https://www.linkedin.com/in/ronanamicel/"><i class="fa fa-linkedin-square"></i></a>
-                            <a href="https://github.com/ronnix"><i class="fa fa-github-square"></i></a>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4 teammate">
-                        <img class="img-thumbnail" src="img/yannick-francois.jpg">
-                        <div class="name">Yannick François</div>
-                        <div class="bio">
-                            Full-stack senior developer.
-                            <br>
-                            Ruby expert.
-                        </div>
-                        <div class="social">
-                            <a href="https://twitter.com/ya_f"><i class="fa fa-twitter-square"></i></a>
-                            <a href="https://www.linkedin.com/in/yannickfrancois"><i class="fa fa-linkedin-square"></i></a>
-                            <a href="https://github.com/yaf"><i class="fa fa-github-square"></i></a>
-                            <a href="http://elsif.fr"><i class="fa fa-rss-square"></i></a>
-
-                        </div>
-                    </div>
-
-                    <div class="col-md-4 teammate">
-                        <img class="img-thumbnail" src="img/stephane-bagnier.jpg">
-                        <div class="name">Stéphane Bagnier</div>
-                        <div class="bio">
-                            Software and startup craftsman.
-                            <br>
-                            Agile and Lean Startup practitioner.
-                        </div>
-                        <div class="social">
-                            <a href="https://twitter.com/bagnier"><i class="fa fa-twitter-square"></i></a>
-                            <a href="https://www.linkedin.com/in/bagnier"><i class="fa fa-linkedin-square"></i></a>
-                            <a href="http://www.agilelevelup.com"><i class="fa fa-rss-square"></i></a>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="row">
-                    <div class="col-md-10 col-md-offset-1">
-
-
-                    </div>
-                </div>
-
-            </div>
-
-            <section class="how-we-work">
-                <div class="row">
-                    <div class="col-md-6 col-md-offset-3">
-
-                        <h3>How we work</h3>
-
-                        <ul>
-                            <li>We're startup people, which means we have extensive hands-on experience of developing new software products with limited resources, in a context of high uncertainty.</li>
-
-                            <li>We learned a bit from our successes, a lot from our mistakes, and we're still learning every day.</li>
-
-                            <li>
-                            We know the buzzwords (Lean Startup / Customer Development, Agile / SCRUM / XP...) but we're pragmatists, which means we like to use the right tools for the job.
-                            </li>
-
-                            <li>
-                            You can hire us to help you on specific assignments, but we like to develop long-term relationships with our customers, acting as your trusted technical advisor.
-                            </li>
-
-                            <li>
-                            If you're a startup, you can think of us as your part-time chief technical officer (CTO).
-                            </li>
-                        </ul>
-
-                    </div>
-                </div>
-            </section>
-
-            <section class="contact-us">
-                <div class="row">
-                    <h3>Contact us</h3>
-                    <p>Think we can help? Send an email to <b>hello@pocketsensei.net</b> and we'll get back to you.</p>
-                </div>
-            </section>
-
-            <section class="social">
-                <div class="row">
-                    <a class="circle" href="https://twitter.com/PocketSensei"><i class="fa fa-twitter"></i></a>
-                    <a class="circle" href="https://www.linkedin.com/company/pocket-sensei"><i class="fa fa-linkedin"></i></a>
-                    <a class="circle" href="https://github.com/PocketSensei"><i class="fa fa-github"></i></a>
-                </div>
-            </section>
-
-        </div>
-
-        <script src="https://code.jquery.com/jquery.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-  </body>
-</html>
+fr/index.html
