GH Pages does not like symlinks

--- a/index.en.html
+++ b/index.en.html
@@ -6,8 +6,8 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link href="../css/bootstrap.min.css" rel="stylesheet">
-        <link href="../css/style.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
         <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -24,7 +24,7 @@
                 <div class="row">
                     <h1>Pocket Sensei</h1>
                     <h2>Helping organizations innovate through software</h2>
-                    <img class="logo img" src="../img/pocket-sensei.png">
+                    <img class="logo img" src="img/pocket-sensei.png">
                 </div>
             </header>
 
@@ -45,7 +45,7 @@
 
                 <div class="row">
                     <div class="col-md-4 teammate">
-                        <img class="img-thumbnail" src="../img/ronan-amicel.jpg">
+                        <img class="img-thumbnail" src="img/ronan-amicel.jpg">
                         <div class="name">Ronan Amicel</div>
                         <div class="bio">
                             Geek &amp; entrepreneur.
@@ -60,7 +60,7 @@
                     </div>
 
                     <div class="col-md-4 teammate">
-                        <img class="img-thumbnail" src="../img/yannick-francois.jpg">
+                        <img class="img-thumbnail" src="img/yannick-francois.jpg">
                         <div class="name">Yannick François</div>
                         <div class="bio">
                             Full-stack senior developer.
@@ -77,7 +77,7 @@
                     </div>
 
                     <div class="col-md-4 teammate">
-                        <img class="img-thumbnail" src="../img/stephane-bagnier.jpg">
+                        <img class="img-thumbnail" src="img/stephane-bagnier.jpg">
                         <div class="name">Stéphane Bagnier</div>
                         <div class="bio">
                             Software and startup craftsman.
@@ -140,6 +140,6 @@
         </div>
 
         <script src="https://code.jquery.com/jquery.js"></script>
-        <script src="../js/bootstrap.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
