--- a/index.html
+++ b/index.html
@@ -1,1 +1,169 @@
-fr/index.html
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Pocket Sensei</title>
+
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
+        <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+        <![endif]-->
+    </head>
+    <body>
+        <div class="container">
+
+            <header>
+                <div class="row">
+                    <h1>Pocket Sensei</h1>
+                    <h2>Un peu de sagesse pour vos développements logiciels</h2>
+                    <!-- <h2>Un peu de sagesse dans votre logiciel</h2> -->
+                    <img class="logo img" src="img/pocket-sensei.png">
+                </div>
+            </header>
+
+            <section class="about text-center">
+                <div class="row">
+                    <div class="col-md-6 col-md-offset-3">
+                        <h3>Ce que nous faisons</h3>
+                        <p>Nous aidons nos clients&nbsp;:<p>
+                        <p>1. à construire le bon logiciel,</p>
+                        <p>2. à mieux construire leur logiciel.</p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="team">
+
+                <h3>L'équipe</h3>
+
+                <div class="row">
+                    <div class="col-md-4 teammate">
+                        <img class="img-thumbnail" src="img/ronan-amicel.jpg">
+                        <div class="name">Ronan Amicel</div>
+                        <div class="bio">
+                            Développeur «&nbsp;full-stack&nbsp;» senior.
+                            <br>
+                            Python, DevOps, Agile, Lean Startup.
+                        </div>
+                        <div class="social">
+                            <a href="https://twitter.com/amicel"><i class="fa fa-twitter-square"></i></a>
+                            <a href="https://www.linkedin.com/in/ronanamicel/"><i class="fa fa-linkedin-square"></i></a>
+                            <a href="https://github.com/ronnix"><i class="fa fa-github-square"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 teammate">
+                        <img class="img-thumbnail" src="img/yannick-francois.jpg">
+                        <div class="name">Yannick François</div>
+                        <div class="bio">
+                            Développeur «&nbsp;full-stack&nbsp;» senior.
+                            <br>
+                            Expert Ruby.
+                        </div>
+                        <div class="social">
+                            <a href="https://twitter.com/ya_f"><i class="fa fa-twitter-square"></i></a>
+                            <a href="https://www.linkedin.com/in/yannickfrancois"><i class="fa fa-linkedin-square"></i></a>
+                            <a href="https://github.com/yaf"><i class="fa fa-github-square"></i></a>
+                            <a href="http://elsif.fr"><i class="fa fa-rss-square"></i></a>
+
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 teammate">
+                        <img class="img-thumbnail" src="img/stephane-bagnier.jpg">
+                        <div class="name">Stéphane Bagnier</div>
+                        <div class="bio">
+                            Software and startup craftsman.
+                            <br>
+                            Praticien agile et Lean Startup.
+                        </div>
+                        <div class="social">
+                            <a href="https://twitter.com/bagnier"><i class="fa fa-twitter-square"></i></a>
+                            <a href="https://www.linkedin.com/in/bagnier"><i class="fa fa-linkedin-square"></i></a>
+                            <a href="http://www.agilelevelup.com"><i class="fa fa-rss-square"></i></a>
+                        </div>
+                    </div>
+
+                </div>
+
+            </section>
+
+            <section class="how-we-work">
+                <div class="row">
+                    <div class="col-md-6 col-md-offset-3">
+
+                        <h3>Comment nous travaillons</h3>
+
+                        <ul>
+                            <li>Notre expérience des startups nous a appris à développer de nouveaux produits logiciels dans un contexte de changements rapides, de ressources limitées et de forte incertitude.</li>
+
+                            <li>Nous avons appris un peu de nos succès, beaucoup de nos erreurs, et nous continuons à apprendre chaque jour.</li>
+
+                            <li>
+                            Les méthodes de référence n'ont pas de secret pour nous (Lean Startup / Customer Development, Agile / SCRUM / XP...) mais nous sommes avant tout pragmatiques, et nous aimons choisir les bons outils en fonction de la situation, sans a priori.
+                            </li>
+
+                            <li>
+                            Vous pouvez faire appel à nous pour un besoin ponctuel (conseil, audit, formation, mise en place de bonnes pratiques), mais nous aimons aussi accompagner nos clients dans la durée, et être des conseillers de confiance sur l'ensemble de leurs problématiques techniques.
+                            </li>
+
+                            <li>
+                            Si vous êtes une startup, vous pouvez nous voir comme une sorte de directeur technique à la demande (<i>on-demand CTO</i>).
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
+            </section>
+
+            <section class="contact-us">
+                <div class="row">
+                    <h3>Nous contacter</h3>
+                    <p>Vous pensez que nous pouvons vous aider&nbsp;?</p>
+                    <p>Écrivez-nous à <b>hello@pocketsensei.net</b> et nous reviendrons vers vous rapidement.</p>
+                </div>
+            </section>
+
+            <section class="contact-us">
+                <div class="row">
+                    <h3>Rejoindre le réseau</h3>
+                    <p>Vous vous reconnaissez dans cette page&nbsp;?</p>
+                    <p>Peut-être que nous pourrions faire un bout de chemin ensemble...</p>
+                </div>
+            </section>
+
+            <section class="social">
+                <div class="row">
+                    <a class="circle" href="https://twitter.com/PocketSensei"><i class="fa fa-twitter"></i></a>
+                    <a class="circle" href="https://www.linkedin.com/company/pocket-sensei"><i class="fa fa-linkedin"></i></a>
+                    <a class="circle" href="https://github.com/PocketSensei"><i class="fa fa-github"></i></a>
+                </div>
+            </section>
+
+            <section class="poem">
+                <div class="row">
+                    <p>
+                        Gravir la montagne, franchir le cap<br>
+                        Construire son équipe, son logiciel<br>
+                        Trouver son produit, ses clients<br>
+                        Nous marchons à vos côtés<br>
+                        Tous uniques, tous unis<br>
+                        Un réseau&nbsp;: Pocket Sensei<br>
+                    </p>
+                </div>
+            </section>
+
+        </div>
+
+        <script src="https://code.jquery.com/jquery.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+  </body>
+</html>
